--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<div class="tab--card">
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Twitch Streaming API App</title>
+	<style type="text/css" href="style.css" ></style>
+    <style type="text/css" href="https://fonts.googleapis.com/css?family=Lato"></style>
+    <style type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"></style>
+    <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
+</head>
+<body>
+    <div class="tab--card">
     <ul class="tab--card--header">
       <li class="tab--card--header--title">
           <div class="iconbox">
@@ -18,3 +30,6 @@
     <div class="tab--card--content">
     </div>
   </div>
+</body>
+</html>
+
