--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>Twitch Streaming API App</title>
-	<link type="text/css" href="style.css">
-    	<link type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
-    	<link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	<link type="text/css" rel="stylesheet" href="style.css">
+    	<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    	<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     	<script src="script.js"></script>
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
