--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link type="text/css" rel="stylesheet" href="style.css">
     	<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     	<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
    	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
 	<script src="script.js"></script>
